create user file using gorest API and json serializable

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   build_runner: ^2.4.11
   cupertino_icons: ^1.0.6
   dio: ^5.6.0
@@ -38,6 +39,7 @@ dependencies:
   get_it: ^7.7.0
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
+  meta: ^1.15.0
   retrofit: ^4.2.0
   retrofit_generator: ^8.2.0
 
