--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
   get_it: ^7.7.0
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
